# query-plan-charts

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
samples/: collect_job_by_time.toml  delete_expired_client_reports_baseline.toml  delete_expired_client_reports_global_expiry_age.toml  delete_expired_client_reports_no_limit.toml
src/query_plan_charts/: __init__.py  __main__.py  base.py  postgres_plans.py
tests/: test_custom_geomspace.py  test_postgres_plans.py
