[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "query-plan-charts"
version = "0.0.1"
dependencies = [
    "matplotlib ~= 3.6.2",
    "numpy ~= 1.23.4",
    "psycopg2 ~= 2.9.5",
    "testcontainers ~= 3.7.0",
    "tomli ~= 2.0.1 ; python_version < '3.11'",
    "tqdm ~= 4.64.1",
]
